@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020120602"
-#define public MagickPackageReleaseDate "snapshot-20120602"
+#define public MagickPackageVersionAddendum ".020120603"
+#define public MagickPackageReleaseDate "snapshot-20120603"
